--- a/UVBot.csproj
+++ b/UVBot.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="telegram.bot" Version="17.0.0" />
   </ItemGroup>
 
 </Project>
